[package]
name = "brands-rs"
version = "0.1.0"
authors = ["AlvinHon <alvin.cpp@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AlvinHon/brands-rs"
description = "A digital cash scheme"

[lib]
name = "brands"
path = "src/lib.rs"

[dependencies]
diffie-hellman-groups = { git = "https://github.com/AlvinHon/diffie-hellman-groups", features = ["primegroup"]}
num-bigint = { version = "0.4.5", features = ["rand", "serde"] }
rand = "0.8.5"
sha2 = "0.10.8"
serde = { version = "1.0.203", features = ["derive"] }
hmac = "0.12.1"